--- a/app.css
+++ b/app.css
@@ -33,7 +33,7 @@ body {
     margin-top: 2em;
 }
 
-h1, #play-arena {
+h1, h2, #play-arena {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
