--- a/app.css
+++ b/app.css
@@ -16,6 +16,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+input {
+    font-size: 16px;
+}
+
 .play {
     height: 100%;
 }
@@ -30,13 +34,17 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    margin-top: 2em;
+    margin-top: 1em;
 }
 
-h1, h2, #play-arena {
+h1, h2, #play-arena, .centered {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
+.centered {
+    font-size: 14px;
+    font-weight: normal;
+}
