--- a/app.css
+++ b/app.css
@@ -16,18 +16,35 @@ body {
     font-family: Arial, sans-serif;
 }
 
+input {
+    font-size: 16px;
+}
+
 .play {
     height: 100%;
 }
 
-input {
-    width: 12em;
+.checkbox {
+    margin-right: 1em;
 }
 
-h1, input, #play-arena {
+.button {
+    width: 16em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 1em;
+}
+
+h1, h2, #play-arena, .centered {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
 
+.centered {
+    font-size: 14px;
+    font-weight: normal;
+}
